--- a/Frontend/travelbuddy/package.json
+++ b/Frontend/travelbuddy/package.json
@@ -9,11 +9,13 @@
     "cra-template": "1.2.0",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
