--- a/Frontend/travelbuddy/package.json
+++ b/Frontend/travelbuddy/package.json
@@ -9,6 +9,7 @@
     "cra-template": "1.2.0",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primereact": "^8.5.0",
     "react": "^18.2.0",
