--- a/Frontend/travelbuddy/package.json
+++ b/Frontend/travelbuddy/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.2.1",
     "cra-template": "1.2.0",
     "express": "^4.18.1",
+    "formik": "^2.2.9",
     "mysql2": "^2.3.3",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
