--- a/travelbuddy/test/src/main/resources/application.properties
+++ b/travelbuddy/test/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/travelbuddy?serverTimezone=UTC
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = Root
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
