--- a/Frontend/travelbuddy/package.json
+++ b/Frontend/travelbuddy/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primereact": "^8.5.0",
